# VSYS-FHTW

TWMailer/: .gitignore  CMakeLists.txt  Dockerfile  Documentation.md  Makefile  Readme.md  docker-compose.yaml
TWMailer/docker/: docker-compose.yaml
TWMailer/docker/TWMailer/: Dockerfile
TWMailer/include/: Command.h  CommandProcessor.h  SendCommand.h  requestProcessor.h  requestProcessor.hpp  response.h  session.h  session.hpp  socketServer.h  socketServer.hpp
TWMailer/include/exceptions/: fileNotFoundException.hpp
TWMailer/include/libraries/plusaes/: plusaes.hpp
TWMailer/include/libraries/spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  formatter.h  logger-inl.h  logger.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h
TWMailer/include/libraries/spdlog/cfg/: argv.h  env.h  helpers.h  (+1 more)
TWMailer/include/libraries/uuid/: uuid.h
TWMailer/include/persistence/: banRepository.h  banRepository.hpp  mailRepository.h  mailRepository.hpp
TWMailer/include/persistence/entities/: banTableEntry.h  banTableEntry.hpp  mail.h  mail.hpp
TWMailer/include/requests/: authenticatedRequest.h  authenticatedRequest.hpp  deleteRequest.h  deleteRequest.hpp  listRequest.h  listRequest.hpp  listSentRequest.hpp  loginRequest.h  loginRequest.hpp  quitRequest.h  quitRequest.hpp  readRequest.h  readRequest.hpp  request.h  request.hpp  sendRequest.h  sendRequest.hpp
TWMailer/include/utils/: inputUtils.hpp  ldapUtils.hpp  socketUtils.h  socketUtils.hpp  stringUtils.h  stringUtils.hpp
TWMailer/src/: client.cpp  server.cpp
(+50 files in other folders)
